플랫폼 쓰레드 생성 방식 변경